# zync

./: UDPAdapter_v0.1.py  UDPAdapter_v10.py  log.py
UDPAdapter/: Makefile.am  build.sh  configure.ac
UDPAdapter/src/: Makefile.am  adapter.c  adapter.h  main.c  map  msg_type.h  type.h
